--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <a href="index.html"><img src="image/StopTCA-2.png" /></a>
     </div>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-    <nav>
+  
+    <nav id=" navbar-menu">
       <ul>
         <li><a href="#">À propos</a></li>
         <li><a href="#">Tarifs</a></li>
@@ -30,6 +31,7 @@
       <div id="google_translate_element" class="translate-widget"></div>
     </div>
   </header>
+  
   
   <!-- Script Google Translate -->
   <script type="text/javascript">
